記事一覧にタグの表示を追加

--- a/src/content/blog/docker-private-repository/index.mdx
+++ b/src/content/blog/docker-private-repository/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Dockerのプライベートリポジトリ構築'
-description: 'Dockerのプライベートリポジトリ構築'
+tags: ['docker']
 pubDate: '2022/12/3'
 updatedDate: '2022/12/3'
 ---
